--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .container {
     width: 85%;
     margin: 0 auto;
@@ -14,6 +18,69 @@
 #main-menu {
     background: #656565;
     padding: 50px 20px;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 15px;
+    grid-template-columns: 5fr repeat(auto-fill, minmax(10px, 1fr));
+}
+
+#main-menu>img {
+    width: 150px;
+}
+
+.menu-items {
+    transition: all 0.4s ease;
+    border-radius: 10px;
+    padding: 10px;
+    display: grid;
+    place-items: center;
+    font-size: 1.3em;
+    color: #fafafa;
+    cursor: pointer;
+}
+
+.menu-items:hover {
+    background-color: #4e4e4e;
+}
+
+.lifted {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4e4e4e;
+    box-shadow: 0 1px 10px #555;;
+}
+
+.lifted:hover {
+    background-color: #3d3d3d;
+}
+
+.lifted img {
+    height: 30px;
+    width: 30px;
+    object-fit: contain;
+    margin-left: 5px;
+}
+
+.search-bar {
+    display: flex;
+    background-color: #fafafa;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.search-bar input {
+    width: 100%;
+    background-color: transparent;
+}
+
+.search-bar input::placeholder {
+    font-size: 1.4em;
+}
+
+.search-bar img {
+    width: 22px;
+    margin-right: 10px;
 }
 
 #sub-menu {
@@ -143,4 +210,136 @@
 
 .articles-grid p {
     line-height: 2em;
+}
+
+/* JOIN */
+.join-add {
+    padding: 30px;
+    margin: 0 auto;
+    text-align: center;
+    background: #acacac;
+    width: 50%;
+    font-size: 1.3em;
+    line-height: 2em;
+    border-radius: 10px;
+}
+
+.join-add h2 {
+    margin: 20px 0;
+}
+
+/* FEATURES */
+.boxes {
+    display: flex;
+    width: 100%;
+    overflow-x: scroll;
+    margin: 30px 0;
+}
+
+.boxes::-webkit-scrollbar {
+    height: 20px;
+    background: linear-gradient(90deg, #a3a3a3, #ebebeb);
+}
+
+.boxes::-webkit-scrollbar-thumb {
+    background-color: #919191;
+    border-radius: 10px;
+}
+
+.features {
+    text-align: center;
+}
+.features > h2 {
+    font-size: 3em;
+}
+
+.features > h4 {
+    font-size: 1.9em;
+}
+
+.box {
+    width: 20vw;
+    padding: 10px;
+    flex-shrink: 0;
+    font-size: 1.5em;
+    line-height: 1.7em;
+    padding: 50px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: #656565;
+    margin: 0 20px;
+}
+
+.box > * {
+    margin: 30px 0;
+}
+
+/* AD */
+
+#ad {
+    background-color: #656565;
+    width: 100vw;
+    position: relative;
+    left: calc(-50vw + 50%);
+    padding: 40px;
+}
+
+#ad img {
+    display: block;
+    width: 50vw;
+    margin: 0 auto;
+}
+
+#ad h2 {
+    text-align: center;
+    font-size: 3em;
+}
+
+.person {
+    display: flex;
+    font-size: 1.2em;
+    margin-top: 20px;;
+}
+
+.person .rotate_img {
+    font-size: 1.5em;
+}
+
+.person h2 {
+    margin: 20px 0;
+}
+
+#footer {
+    background-image: url(https://www.smashingmagazine.com/images/footer/large-screen__left.svg);
+    background-position: left 10% bottom 2em;
+    background-size: 12em auto;
+    background-color: #656565;
+    background-repeat: no-repeat;
+}
+
+#footer ul {
+    list-style-type: disc;
+    display: flex;
+    text-align: center;
+    padding: 40px;
+    width: 60vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+    font-size: 1.3em;
+    gap: 10px
+}
+#footer li {
+    margin-right: 25px;
+}
+
+#footer a {
+    color: #fafafa;
+    text-decoration: none;
+}
+
+#footer p {
+    max-width: 500px;
+    text-align: center;
+    margin: 0 auto
 }
