--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&family=Varela+Round&display=swap');
+
 *, *::after, *::before {
     margin: 0;
     padding: 0;
     border: none;
     box-sizing: border-box;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+p, #footer {
+    font-family: "Source Serif Pro", serif;
+}
+
+h1, h2, h3, h4, *::placeholder, #main-menu, #sub-menu, button {
+    font-family: "Varela Round", sans-serif;
+}
+
+.author-date {
+    font-family: "Varela Round", sans-serif;
 }
 
 body {
@@ -17,15 +30,17 @@ body {
 
 #main-menu {
     background: #656565;
-    padding: 50px 20px;
+    padding: 20px 40px;
     display: grid;
     grid-auto-flow: column;
     gap: 15px;
-    grid-template-columns: 5fr repeat(auto-fill, minmax(10px, 1fr));
+    grid-template-columns: 1.2fr repeat(6, 1fr) 2fr;
 }
 
 #main-menu>img {
-    width: 150px;
+    width: 100%;
+    display: grid;
+    place-items: center;
 }
 
 .menu-items {
@@ -48,7 +63,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #4e4e4e;
-    box-shadow: 0 1px 10px #555;;
+    box-shadow: 0 1px 10px #555;
 }
 
 .lifted:hover {
@@ -67,6 +82,7 @@ body {
     background-color: #fafafa;
     border-radius: 10px;
     padding: 10px;
+    box-shadow: 0 4px 10px #555;
 }
 
 .search-bar input {
@@ -85,7 +101,30 @@ body {
 
 #sub-menu {
     background: #acacac;
-    padding: 30px 10px;
+    padding: 5px;
+}
+
+#sub-menu li {
+    flex: 1;
+    font-size: 1em;
+    display: grid;
+    place-items: center;
+    background: #919191;
+    padding: 10px;
+    margin: 4px;
+    border-radius: 10px;
+    transition: all 0.4s ease;
+    border: 1px solid transparent;
+    cursor: pointer;
+}
+
+#sub-menu li:hover {
+    border: 1px solid #797979;
+}
+
+#sub-menu ul {
+    list-style-type: none;
+    display: flex;
 }
 
 #showcase {
@@ -97,6 +136,12 @@ body {
     flex: 3;
     display: flex;
     flex-direction: column;
+}
+
+#showcase .article {
+    border-radius: 10px;
+    background: #3d3d3d;
+    margin: 4px;
 }
 
 .article {
@@ -147,6 +192,10 @@ body {
 .sign-up {
     font-size: 2em;
     flex: 1;
+    background-color: #acacac;
+    border-radius: 10px;
+    margin: 4px;
+    padding: 20px;
 }
 
 /* SQUARES */
@@ -192,7 +241,10 @@ body {
 .articles-grid article {
     display: flex;
     font-size: 1.2em;
-    padding: 20px
+    padding: 20px;
+    background: #656565;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .rotate_small {
@@ -298,7 +350,10 @@ body {
 .person {
     display: flex;
     font-size: 1.2em;
-    margin-top: 20px;;
+    margin-top: 20px;
+    background-color: #656565;
+    border-radius: 10px;
+    
 }
 
 .person .rotate_img {
@@ -306,7 +361,9 @@ body {
 }
 
 .person h2 {
-    margin: 20px 0;
+    font-family: "Source Serif Pro", serif;
+    margin: 10px 0;
+    font-size: 1.2em;
 }
 
 #footer {
